Updated homepage text

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/clarkmelchert/" class="social-link"><i class="fab fa-linkedin"></i> LinkedIn</a>
                 <a href="mailto:clark.melchert@gmail.com" class="social-link"><i class="fas fa-envelope"></i> Email</a>
-                <div class="hidden-link-container">
-                    <a href="https://x.com/biteydoginsider" class="social-link hidden-link" aria-label="Hidden Link"><span class="invisible-text">X.com</span></a>
-                </div>
+            </div>
+            <div class="hidden-x-link">
+                <a href="https://x.com/biteydoginsider" id="secretXLink"></a>
             </div>
         </section>
 
@@ -47,7 +47,7 @@
         </section>
 
         <footer class="card-footer">
-            <p>&copy; 2024 Clark Melchert. All rights reserved.</p>
+            <p>&copy; 2025 Clark Melchert. All rights reserved.</p>
         </footer>
     </div>
 
